Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentd-forward
  namespace: fluentd-forward
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
    spec:
      serviceAccountName: fluentd-forward
      containers:
      - name: fluentd
        image: registry.redhat.io/openshift-logging/fluentd-rhel9:latest
        volumeMounts:
        - name: config-volume
          mountPath: /etc/fluent/configs.d/user  # Custom configuration mounted here
        - name: log-volume
          mountPath: /var/log/fluentd-forward
        - name: ca-bundle
          mountPath: /etc/fluent/ca
        ports:
        - containerPort: 24224
      volumes:
      - name: config-volume
        configMap:
          name: fluentd-config
      - name: log-volume
        hostPath:
          path: /var/log/fluentd-forward
          type: Directory
      - name: ca-bundle
        secret:
          secretName: ca-bundle-secret




apiVersion: v1
kind: ConfigMap
metadata:
  name: fluentd-config
  namespace: fluentd-forward
data:
  fluent.conf: |
    [...]
